Rewrite README.md for desktop app with all current features
Complete rewrite reflecting the current state: desktop JavaFX app (not CLI),
multi-PO support, MIDI playback with LED animations, accessibility features,
native executables, keyboard shortcuts, and development setup.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>